--- a/styles.css
+++ b/styles.css
@@ -328,3 +328,53 @@ pre {
 .item-count-select {
   float: right;
 }
+
+.card {
+  width: 100%;
+  height: initial;
+  min-height: 250px;
+  max-height: 350px;
+  overflow-y: auto;
+}
+
+.order-label {
+  margin-bottom: 10px;
+}
+
+.product-name-wrapper {
+  margin-bottom: 25px;
+}
+
+.page-container h1 {
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+.page-container h1 form {
+  margin-top: 15px;
+}
+
+.status-select {
+  float: right;
+  font-size: 20px;
+}
+
+.status-select label {
+  margin-right: 15px;
+}
+
+.count-span {
+    margin-bottom: 15px;
+    float: right;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.orders-btn {
+  font-size: 20px;
+  float: right;
+  width: inherit;
+  margin-top: 10px;
+}
